crates/test-generator/tests/snapshots/ts/test_generated_break_statement.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
for (let i = 0; i < 10; i++) { break; }

AST:
(program
  (for_statement
    initializer: (lexical_declaration
      (variable_declarator
        name: (identifier "i")
        value: (number "0")
      )
    )
    condition: (binary_expression
      left: (identifier "i")
      right: (number "10")
    )
    increment: (update_expression
      argument: (identifier "i")
    )
    body: (statement_block
      (break_statement)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:10 to 1:11 }, name: "i", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:17 to 1:18 }, name: "i", kind: Identifier, context: None },
        Usage { position: { 1:25 to 1:26 }, name: "i", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
