crates/test-generator/tests/snapshots/ts/test_generated_class_declaration.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
class TestClass1 { private field: number = 42; public method1(): number { return this.field; } }

AST:
(program
  (class_declaration
    name: (type_identifier "TestClass1")
    body: (class_body
      (public_field_definition
        (accessibility_modifier "private")
        name: (property_identifier "field")
        type: (type_annotation
          (predefined_type "number")
        )
        value: (number "42")
      )
      (method_definition
        (accessibility_modifier "public")
        name: (property_identifier "method1")
        parameters: (formal_parameters)
        return_type: (type_annotation
          (predefined_type "number")
        )
        body: (statement_block
          (return_statement
            (member_expression
              object: (this "this")
              property: (property_identifier "field")
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:17 }, name: "TestClass1", definition_type: ClassDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
        Definition { position: { 1:28 to 1:33 }, name: "field", definition_type: PropertyDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:55 to 1:62 }, name: "method1", definition_type: MethodDefinition, scope_id: Some(2), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:87 to 1:92 }, name: "field", kind: FieldExpression, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
