crates/test-generator/tests/snapshots/ts/test_generated_conditional_type.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type Test<T> = T extends string ? number : boolean; const value5: Test<string> = 42;

AST:
(program
  (type_alias_declaration
    name: (type_identifier "Test")
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier "T")
      )
    )
    value: (conditional_type
      left: (type_identifier "T")
      right: (predefined_type "string")
      consequence: (predefined_type "number")
      alternative: (predefined_type "boolean")
    )
  )
  (lexical_declaration
    (variable_declarator
      name: (identifier "value5")
      type: (type_annotation
        (generic_type
          name: (type_identifier "Test")
          type_arguments: (type_arguments
            (predefined_type "string")
          )
        )
      )
      value: (number "42")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:6 to 1:10 }, name: "Test", definition_type: TypeDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
        Definition { position: { 1:11 to 1:12 }, name: "T", definition_type: TypeDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:59 to 1:65 }, name: "value5", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:16 to 1:17 }, name: "T", kind: TypeIdentifier, context: None },
        Usage { position: { 1:67 to 1:71 }, name: "Test", kind: TypeIdentifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
