crates/test-generator/tests/snapshots/ts/test_generated_constructor_type.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const ctor: new () => object = class {};

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "ctor")
      type: (type_annotation
        (constructor_type
          parameters: (formal_parameters)
          type: (predefined_type "object")
        )
      )
      value: (class
        body: (class_body)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:11 }, name: "ctor", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
