crates/test-generator/tests/snapshots/ts/test_generated_declaration.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const declaration = value;

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "declaration")
      value: (identifier "value")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "declaration",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 18,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "value",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 21,
                end_line: 1,
                end_column: 26,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
