crates/test-generator/tests/snapshots/ts/test_generated_default_type.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type Test<T1 = string> = T1; const value6: Test = 'default';

AST:
(program
  (type_alias_declaration
    name: (type_identifier "Test")
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier "T1")
        value: (default_type
          (predefined_type "string")
        )
      )
    )
    value: (type_identifier "T1")
  )
  (lexical_declaration
    (variable_declarator
      name: (identifier "value6")
      type: (type_annotation
        (type_identifier "Test")
      )
      value: (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:6 to 1:10 }, name: "Test", definition_type: TypeDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
        Definition { position: { 1:11 to 1:13 }, name: "T1", definition_type: TypeDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:36 to 1:42 }, name: "value6", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:26 to 1:28 }, name: "T1", kind: TypeIdentifier, context: None },
        Usage { position: { 1:44 to 1:48 }, name: "Test", kind: TypeIdentifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
